[project]
name = "cascflow"
version = "3.0.2"
description = "Caltech Archives & Special Collections Workflow Library"
readme = "README.md"
authors = [
    { name = "Tommy Keswick", email = "tkeswick@caltech.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "archivessnake>=0.10",
    "backoff>=2.2",
    "boto3>=1.40",
    "python-decouple>=3.8",
    "requests>=2.32",
    "urllib3>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12",
]
