[project]
name = "cascflow"
version = "3.0.4"
description = "Caltech Archives & Special Collections Workflow Library"
readme = "README.md"
authors = [
    { name = "Tommy Keswick", email = "tkeswick@caltech.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "archivessnake",
    "backoff",
    "boto3",
    "python-decouple",
    "requests",
    "urllib3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "decouple-types",
    "ruff",
]
